--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828' // image loader
     implementation 'com.github.d-max:spots-dialog:1.1@aar' // loading dialog
 
+    implementation "androidx.activity:activity-ktx:1.3.0" // for viewModels()
+    implementation "androidx.fragment:fragment-ktx:1.3.6" // for viewModels()
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
