--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,20 +35,19 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0' // requests lib for REST API
-    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
-    implementation 'com.squareup.picasso:picasso:2.71828' // image loader
-    implementation 'com.github.d-max:spots-dialog:1.1@aar' // loading dialog
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0") // view model
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.4.0") // live data
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.0")
 
-    implementation "androidx.activity:activity-ktx:1.4.0" // for viewModels()
-    implementation "androidx.fragment:fragment-ktx:1.4.0" // for viewModels()
+    implementation "androidx.activity:activity-ktx:1.5.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.0"
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
