--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0")
