--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.great.testapp"
+        applicationId "com.great.marvelapp"
         minSdk 24
         targetSdk 31
         versionCode 1
