--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MarvelApp">
+        android:theme="@style/Theme.MarvelApp.Splash">
 
         <activity android:name="com.great.app.AppActivity"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden"
